Use MySQL for configuration and dynamic operations data.

--- a/src/AspNetCoreIdentity.Server/appsettings.json
+++ b/src/AspNetCoreIdentity.Server/appsettings.json
@@ -9,5 +9,8 @@
                 "System": "Warning"
             }
         }
+    },
+    "ConnectionStrings": {
+        "Default": "Server=localhost;Database=AspNetCoreIdentity;user=guest;password=P@$$w0rd"
     }
 }
